# cpp-auth-api

./: .env.example  .gitignore  CMakeLists.txt  README.md  cmakeLists.txt
include/: db.h  handler.h  http_server.h  user.h  validator.h
migrations/: 001_create_users.sql
src/: crypto.cpp  db.cpp  handler.cpp  http_server.cpp  main.cpp  validator.cpp
